Fixed overflow

--- a/app/slide/[id]/page.module.css
+++ b/app/slide/[id]/page.module.css
@@ -2,8 +2,10 @@
   padding: 24px;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
+/*Slide animation*/
 @keyframes moveleft {
   from {
     transform: translateX(200%);
